--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}arunkumar885825/frontend:latest
+            ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
       # Build backend
       - name: Build backend image
@@ -43,6 +43,6 @@ jobs:
           file: ./backend/Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}arunkumar885825/backend:latest
+            ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
     
