complete_CI_main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,5 +44,13 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/backend:latest
+ # (Optional) Test containers using docker-compose
+      - name: Start services for tests
+        run: |
+          docker compose -f docker-compose.yml up -d
+          sleep 15
 
+      - name: Stop containers
+        if: always()
+        run: docker compose -f docker-compose.yml down
     
