Update_CI_D-to-d_main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,10 +47,10 @@ jobs:
  # (Optional) Test containers using docker-compose
       - name: Start services for tests
         run: |
-          docker compose -f docker-compose.yml up -d
+          docker compose -f Docker-compose.yml up -d
           sleep 15
 
       - name: Stop containers
         if: always()
-        run: docker compose -f docker-compose.yml down
+        run: docker compose -f Docker-compose.yml down
     
